infra/stack.yml
Parameters:
  hostedZone:
    Description: ID of Route 53 hosted zone
    Type: String
    Default: ZBE1Z7TXR83UH
Resources:
  securityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Firewall rules
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
  securityGrouIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 0
      ToPort: 65535
      SourceSecurityGroupId: !GetAtt securityGroup.GroupId
      GroupId: !GetAtt securityGroup.GroupId

  demoInstance:
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: ami-cec307b7
      InstanceType: "t2.small"
      KeyName: arcada
      SecurityGroups: 
        - Ref: securityGroup
      Tags: 
        - Key: Name
          Value: Demo
  demoDns:
    Type: "AWS::Route53::RecordSet"
    Properties: 
      HostedZoneId: !Ref hostedZone
      Name: "demo.arcada.nitor.zone"
      Type: A
      TTL: '60'
      ResourceRecords:
        - !GetAtt demoInstance.PublicIp

#PRODUCTS INFRA START
  productInstance:
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: ami-cec307b7
      InstanceType: "t2.small"
      KeyName: arcada
      SecurityGroups: 
        - Ref: securityGroup
      Tags: 
        - Key: Name
          Value: Product
  productDns:
    Type: "AWS::Route53::RecordSet"
    Properties: 
      HostedZoneId: !Ref hostedZone
      Name: "product.arcada.nitor.zone"
      Type: A
      TTL: '60'
      ResourceRecords:
        - !GetAtt productInstance.PublicIp
#PRODUCTS INFRA END

#ORDERS INFRA START
  ordersInstance:
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: ami-cec307b7
      InstanceType: "t2.small"
      KeyName: arcada
      SecurityGroups: 
        - Ref: securityGroup
      Tags: 
        - Key: Name
          Value: Orders
  ordersDns:
    Type: "AWS::Route53::RecordSet"
    Properties: 
      HostedZoneId: !Ref hostedZone
      Name: "orders.arcada.nitor.zone"
      Type: A
      TTL: '60'
      ResourceRecords:
        - !GetAtt ordersInstance.PublicIp
        
#ORDERS INFRA END

#FRONTEND INFRA START
  frontendInstance:
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: ami-cec307b7
      InstanceType: "t2.small"
      KeyName: arcada
      SecurityGroups: 
        - Ref: securityGroup
      Tags: 
        - Key: Name
          Value: Frontend
  frontendDns:
    Type: "AWS::Route53::RecordSet"
    Properties: 
      HostedZoneId: !Ref hostedZone
      Name: "frontend.arcada.nitor.zone"
      Type: A
      TTL: '60'
      ResourceRecords:
        - !GetAtt frontendInstance.PublicIp
#FRONTEND INFRA END

#STORES INFRA START
  storesInstance:
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: ami-cec307b7
      InstanceType: "t2.small"
      KeyName: arcada
      SecurityGroups: 
        - Ref: securityGroup
      Tags: 
        - Key: Name
          Value: Stores
  storesDns:
    Type: "AWS::Route53::RecordSet"
    Properties: 
      HostedZoneId: !Ref hostedZone
      Name: "stores.arcada.nitor.zone"
      Type: A
      TTL: '60'
      ResourceRecords:
        - !GetAtt storesInstance.PublicIp

# STORES INFRA END
